--- a/demo/knob.html
+++ b/demo/knob.html
@@ -3,62 +3,19 @@
 <head>
     <meta charset="utf-8"/>
     <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="./source/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="./css/demo.css" rel="stylesheet"/>
+
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
     <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./source/bower_components/ace-builds/src-noconflict/ace.js"></script>
     <style>
-        .description {
-            padding: 5px;
-            /* background: rgba(0, 0, 0, 0.78); */
-            color: #4CAF50;
-            /* color: white; */
-            font-style: italic;
-            height: 100%;
-            position: relative;
-            display: inline;
-        }
 
-        .fn-btn {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        .preview {
-            height: 100%;
-        }
-
-        body {
-            padding: 20px;
-            background: #4CAF50;
-        }
-
-        .demo {
-            margin: 0px;
-            height: 100%;
-            position: relative;
-            box-shadow: inset 1px 1px 5px 5px #4CAF50;
-            background-color: white;
-            border-radius: 20px;
-            padding: 25px;
-            border-color: #4CAF50;
-        }
-
-        .preview {
-            padding: 15px;
-        }
-
-        .introduction {
-            padding: 40px;
-            color: white;
-        }
-
-        .introduction-title {
-            font-size: 60px;
-        }
     </style>
     <script>
         $(document).on('ready', function () {
@@ -93,6 +50,18 @@
                     value: Math.random() * 100
                 });
             }
+
+            var editor = ace.edit("editor");
+            editor.setTheme("ace/theme/monokai");
+            editor.getSession().setMode("ace/mode/javascript");
+
+            $(".play-btn").on("click", function (evt) {
+                $("#preview").empty();
+                $("#preview").html("<div class='col-lg-12 text-center'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
+                eval(editor.getValue());
+            });
+            $(".play-btn").draggable({containment: "parent"});
+            $(".play-btn").trigger("click");
         });
     </script>
 </head>
@@ -115,46 +84,57 @@
     </p>
 </div>
 <div class="row demo">
-    <div class="col-sm-4 description">
-        <h1>Knob</h1>
-        <ul>
-            <li>Click or use the tab to focus it</li>
-            <li>Use arrow keys to control</li>
-            <li>resize the window to test the Responsiveness</li>
-        </ul>
-        <pre>
-            fluid.sisiliano.knob($('#elm'), {
-                color: "#FF0000",
-                value: 23
-            });
-        </pre>
-        <br>
-        <br>
-        <button class="btn fn-btn">Read more</button>
-        <button class="btn fn-btn">Try..</button>
+    <div class="col-sm-12 description">
+        <div class="col-sm-6">
+            <h1>Knob</h1>
+            <ul>
+                <li>Click or use the tab to focus it</li>
+                <li>Use arrow keys to control</li>
+                <li>resize the window to test the Responsiveness</li>
+            </ul>
+            <br>
+            <br>
+            <button class="btn fn-btn">Read more</button>
+            <button class="btn fn-btn">Try..</button>
+        </div>
+        <div class="col-sm-6">
+            <div class="col-xs-6 test" style="height: 50%"></div>
+            <div class="col-xs-3 test" style="height: 50%"></div>
+            <div class="col-xs-3 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-2 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+            <div class="col-xs-1 test" style="height: 50%"></div>
+        </div>
     </div>
-    <div class="col-sm-8 preview test-outer">
-        <div class="col-xs-6 test" style="height: 50%"></div>
-        <div class="col-xs-3 test" style="height: 50%"></div>
-        <div class="col-xs-3 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-2 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
-        <div class="col-xs-1 test" style="height: 50%"></div>
+    <div class="col-lg-12 try-example" style="min-height: 300px">
+        <div class="col-xs-6" style="min-height: 300px">
+            <div id="editor" class="col-sm-12" style="min-height: 400px">
+fluid.sisiliano.knob($('#preview'), {
+    color: "white",
+    value: 23
+});
+            </div>
+            <div class="btn play-btn glyphicon glyphicon-play">
+            </div>
+        </div>
+        <div class="col-xs-6 preview" style="min-height: 400px;">
+            <div id="preview" style="width: 250px"></div>
+        </div>
     </div>
 </div>
 </body>
