--- a/demo/piano.html
+++ b/demo/piano.html
@@ -6,6 +6,7 @@
     <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
     <link href="./source/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="./css/demo.css" rel="stylesheet"/>
 
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
@@ -14,88 +15,7 @@
     <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./source/bower_components/ace-builds/src-noconflict/ace.js"></script>
     <style type="text/css" media="screen">
-        #editor {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-        }
 
-        .description {
-            padding: 5px;
-            /* background: rgba(0, 0, 0, 0.78); */
-            color: #4CAF50;
-            /* color: white; */
-            font-style: italic;
-            height: 100%;
-            position: relative;
-            display: inline;
-        }
-
-        .fn-btn {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        .preview {
-            height: 100%;
-        }
-
-        body {
-            padding: 20px;
-            background: #4CAF50;
-        }
-
-        .demo {
-            margin: 0px;
-            height: 100%;
-            position: relative;
-            box-shadow: inset 1px 1px 5px 5px #4CAF50;
-            background-color: white;
-            border-radius: 20px;
-            padding: 25px;
-            border-color: #4CAF50;
-        }
-
-        .preview {
-            padding: 15px;
-            border: solid 5px #272822;
-            background: white;
-            box-shadow: inset 0px 0px 10px 10px #272822;
-        }
-
-        .introduction {
-            padding: 40px;
-            color: white;
-        }
-
-        .introduction-title {
-            font-size: 60px;
-        }
-
-        .play-btn {
-            color: white;
-            top: 70px;
-            position: relative;
-            z-index: 1000;
-            background-color: rgba(76, 175, 80, 0.49);
-            left: 40%;
-            font-size: 40px;
-            box-shadow: 0px 0px 20px 1px rgb(52, 89, 51);
-        }
-
-        .loading-animation {
-            font-size: 100px;
-            color: red;
-            position: relative;
-            top: 50px;
-            left: 40px;
-        }
-
-        .try-example {
-            padding: 10px;
-        }
     </style>
     <script>
         $(document).on('ready', function () {
@@ -160,11 +80,17 @@
                 });
             }
 
-            $(".play-btn").on("click", function (evt) {
+            var editor = ace.edit("editor");
+            editor.setTheme("ace/theme/monokai");
+            editor.getSession().setMode("ace/mode/javascript");
+
+            $(".play-btn").on("load click", function (evt) {
                 $("#preview").empty();
                 $("#preview").html("<div class='col-lg-12 text-center'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
                 eval(editor.getValue());
             });
+            $(".play-btn").draggable({containment: "parent"});
+            $(".play-btn").trigger("click");
         });
     </script>
 </head>
@@ -235,13 +161,5 @@ fluid.sisiliano.piano($('#preview'), {
         </div>
     </div>
 </div>
-
-
-<script>
-    var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.getSession().setMode("ace/mode/javascript");
-</script>
-
 </body>
 </html>
