--- a/src/controllers/knob/knob.html
+++ b/src/controllers/knob/knob.html
@@ -1,123 +1,118 @@
-<div tabindex="0"
-     class="sisiliano"
-     role="slider"
-     aria-label="{{title}}"
-     aria-describedby="{{description}}"
-     aria-valuenow=""
-     aria-valuemax="{{max}}"
-     aria-valuemin="{{min}}">
-    <svg
-            xmlns:osb="http://www.openswatchbook.org/uri/2009/osb"
-            xmlns:dc="http://purl.org/dc/elements/1.1/"
-            xmlns:cc="http://creativecommons.org/ns#"
-            xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-            xmlns:svg="http://www.w3.org/2000/svg"
-            xmlns="http://www.w3.org/2000/svg"
-            xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-            viewBox="0 0 300 300"
-            width="100%"
-            height="100%"
-            class="sisiliano-knob">
-        <defs
-                id="defs4">
-            <filter
-                    style="color-interpolation-filters:sRGB;"
-                    id="filter6244">
-                <feFlood
-                        flood-opacity="0.4"
-                        flood-color="black"
-                        result="flood"
-                        id="feFlood6246" />
-                <feComposite
-                        in="flood"
-                        in2="SourceGraphic"
-                        operator="in"
-                        result="composite1"
-                        id="feComposite6248" />
-                <feGaussianBlur
-                        in="composite1"
-                        stdDeviation="3"
-                        result="blur"
-                        id="feGaussianBlur6250" />
-                <feOffset
-                        dx="-1"
-                        dy="1"
-                        result="offset"
-                        id="feOffset6252" />
-                <feComposite
-                        in="SourceGraphic"
-                        in2="offset"
-                        operator="over"
-                        result="composite2"
-                        id="feComposite6254" />
-            </filter>
-            <filter
-                    style="color-interpolation-filters:sRGB;"
-                    id="filter6245">
-                <feFlood
-                        flood-opacity="0.5"
-                        flood-color="black"
-                        result="flood"
-                        id="feFlood6246" />
-                <feComposite
-                        in="flood"
-                        in2="SourceGraphic"
-                        operator="in"
-                        result="composite1"
-                        id="feComposite6248" />
-                <feGaussianBlur
-                        in="composite1"
-                        stdDeviation="3.5"
-                        result="blur"
-                        id="feGaussianBlur6250" />
-                <feOffset
-                        dx="2"
-                        dy="-2"
-                        result="offset"
-                        id="feOffset6252" />
-                <feComposite
-                        in="SourceGraphic"
-                        in2="offset"
-                        operator="over"
-                        result="composite2"
-                        id="feComposite6254" />
-            </filter>
-        </defs>
+<svg
+        aria-hidden="true"
+        xmlns:osb="http://www.openswatchbook.org/uri/2009/osb"
+        xmlns:dc="http://purl.org/dc/elements/1.1/"
+        xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+        xmlns:svg="http://www.w3.org/2000/svg"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+        viewBox="0 0 300 300"
+        width="100%"
+        height="100%"
+        class="sisiliano-knob">
+    <defs
+            id="defs4">
+        <filter
+                style="color-interpolation-filters:sRGB;"
+                id="filter6244">
+            <feFlood
+                    flood-opacity="0.4"
+                    flood-color="black"
+                    result="flood"
+                    id="feFlood6246" />
+            <feComposite
+                    in="flood"
+                    in2="SourceGraphic"
+                    operator="in"
+                    result="composite1"
+                    id="feComposite6248" />
+            <feGaussianBlur
+                    in="composite1"
+                    stdDeviation="3"
+                    result="blur"
+                    id="feGaussianBlur6250" />
+            <feOffset
+                    dx="-1"
+                    dy="1"
+                    result="offset"
+                    id="feOffset6252" />
+            <feComposite
+                    in="SourceGraphic"
+                    in2="offset"
+                    operator="over"
+                    result="composite2"
+                    id="feComposite6254" />
+        </filter>
+        <filter
+                style="color-interpolation-filters:sRGB;"
+                id="filter6245">
+            <feFlood
+                    flood-opacity="0.5"
+                    flood-color="black"
+                    result="flood"
+                    id="feFlood6246" />
+            <feComposite
+                    in="flood"
+                    in2="SourceGraphic"
+                    operator="in"
+                    result="composite1"
+                    id="feComposite6248" />
+            <feGaussianBlur
+                    in="composite1"
+                    stdDeviation="3.5"
+                    result="blur"
+                    id="feGaussianBlur6250" />
+            <feOffset
+                    dx="2"
+                    dy="-2"
+                    result="offset"
+                    id="feOffset6252" />
+            <feComposite
+                    in="SourceGraphic"
+                    in2="offset"
+                    operator="over"
+                    result="composite2"
+                    id="feComposite6254" />
+        </filter>
+    </defs>
 
-        <style>
-            .sisiliano-knob-circle {
-                filter: url("#filter6244");
-            }
-            .sisiliano-border, .sisiliano:focus .sisiliano-knob-circle {
-                filter: url("#filter6245");
-            }
-        </style>
+    <style>
+        .sisiliano-knob-circle {
+            filter: url("#filter6244");
+        }
+        .sisiliano-border, .sisiliano:focus .sisiliano-knob-circle {
+            filter: url("#filter6245");
+        }
+        .sisiliano-border, .sisiliano:focus .sisiliano-border {
+            filter: none;
+        }
+    </style>
 
-        <g style="display:inline">
-            <circle
-                    class="sisiliano-border"
-                    r="147" cx="150"
-                    cy="150">
-            </circle>
-            <circle
-                    class="sisiliano-knob-circle sisiliano-knob-background-circle"
-                    id="circle5634"
-                    r="130"
-                    cx="150"
-                    cy="150"/>
-            <text xmlns="http://www.w3.org/2000/svg" x="40" y="170"
-                  class="unselectable sisiliano-knob-value-text">
-                100
-            </text>
-            <circle
-                    class="sisiliano-knob-circle sisiliano-knob-value-circle"
-                    fill="transparent"
-                    id="circle5636"
-                    r="130"
-                    cx="150"
-                    cy="150"
-                    transform="rotate(90, 150, 150)"
-                    stroke-width="20"/>
-        </g>
-    </svg>
-</div>
+    <g style="display:inline">
+        <circle
+                class="sisiliano-border"
+                r="147" cx="150"
+                cy="150">
+        </circle>
+        <circle
+                class="sisiliano-knob-circle sisiliano-knob-background-circle"
+                id="circle5634"
+                r="130"
+                cx="150"
+                cy="150"/>
+        <text xmlns="http://www.w3.org/2000/svg" x="40" y="170"
+              class="unselectable sisiliano-knob-value-text">
+            100
+        </text>
+        <circle
+                class="sisiliano-knob-circle sisiliano-knob-value-circle"
+                fill="transparent"
+                id="circle5636"
+                r="130"
+                cx="150"
+                cy="150"
+                transform="rotate(90, 150, 150)"
+                stroke-width="20"/>
+    </g>
+</svg>
