--- a/demo/piano.html
+++ b/demo/piano.html
@@ -31,43 +31,23 @@
                 "#FFEB3B",
                 "#FF9800"
             ];
-            window.AudioContext = window.AudioContext || window.webkitAudioContext;
-            var context = new window.AudioContext();
-            var nodes = {};
-            if (context) {
-                var masterGain = context.createGain();
-                masterGain.gain.value = 0.3;
-                masterGain.connect(context.destination);
-            }
-
-            var playKey = function (index, frequency) {
-                var oscillator = context.createOscillator();
-                oscillator.type = "square";
-                oscillator.frequency.value = frequency;
-                oscillator.connect(masterGain);
-                oscillator.start(0);
-                nodes[index] = oscillator;
-            };
-
-            var releaseKey = function (index) {
-                var node = nodes[index];
-                if (node) {
-                    node.stop(0);
-                    node.disconnect();
-                    nodes[index] = null;
-                }
-            };
-
             var tds = $('.test');
             var colors = ['#FF0000', 'blue', 'yellow', 'red', 'orange', 'blue'];
             for (var i = 0; i < tds.length; i++) {
                 sisiliano.piano($(tds[i]), {
                     listeners: {
-                        onKeyPress: function (key, frequency) {
-                            playKey(key, frequency);
+                        onKeyPress: {
+                            func: "{musicBox}.play",
+                            args: ["{arguments}.0", "{arguments}.1"]
                         },
-                        onKeyRelease: function (key) {
-                            releaseKey(key);
+                        onKeyRelease: {
+                            func: "{musicBox}.release",
+                            args: ["{arguments}.0"]
+                        }
+                    },
+                    components: {
+                        musicBox: {
+                            type: "sisiliano.util.makeMusic"
                         }
                     }
                 });
@@ -165,11 +145,18 @@ sisiliano.piano($('#preview'), {
         }
     },
     listeners: {
-        onKeyPress: function (key, frequency) {
-            playKey(key, frequency);
+        onKeyPress: {
+            func: "{musicBox}.play",
+            args: ["{arguments}.0", "{arguments}.1"]
         },
-        onKeyRelease: function (key) {
-            releaseKey(key);
+        onKeyRelease: {
+            func: "{musicBox}.release",
+            args: ["{arguments}.0"]
+        }
+    },
+    components: {
+        musicBox: {
+            type: "sisiliano.util.makeMusic"
         }
     }
 });
