--- a/demo/linear-slider.html
+++ b/demo/linear-slider.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="utf-8"/>
     <link href="./source/dist/sisiliano.min.css" rel="stylesheet"/>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="./source/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link href="./source/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="./css/demo.css" rel="stylesheet"/>
 
     <script src="./source/lib/infusion/infusion-all.js"></script>
     <script src="./source/lib/handlebars/handlebars-1.0.rc.2.js"></script>
     <script src="./source/bower_components/d3/d3.js"></script>
     <script src="./source/dist/sisiliano.js"></script>
-    <script src="./source/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./source/bower_components/ace-builds/src-noconflict/ace.js"></script>
     <style>
 
@@ -60,7 +56,7 @@
 
             $(".play-btn").on("click", function (evt) {
                 $("#preview").empty();
-                $("#preview").html("<div class='col-lg-12 text-center'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
+                $("#preview").html("<div class='box text-center' style='width: 100%'><i class='loading-animation fa-li fa fa-spinner fa-spin'></i></div>");
                 eval(editor.getValue());
             });
             $(".play-btn").draggable({containment: "parent"});
@@ -69,7 +65,7 @@
     </script>
 </head>
 <body>
-<div class="row introduction">
+<div class="box introduction" style="width: 100%">
     <h1 class="introduction-title">Sisiliano</h1>
     <p>
         With the introduction of the Web Audio API and music frameworks such as Flocking,
@@ -86,25 +82,25 @@
         envelope editors, waveform viewers
     </p>
 </div>
-<div class="row demo">
-    <div class="col-sm-12 description">
-        <div class="col-sm-4">
+<div class="box demo" style="width: 100%">
+    <div class="box description" style="width: 100%">
+        <div class="box introduction-div">
             <h1>Linear Slider</h1>
 
             <button class="btn fn-btn">Read more</button>
             <button class="btn fn-btn">Try..</button>
         </div>
-        <div class="col-sm-8">
-            <div class="col-xs-12 test" style="height: 120px"></div>
-            <div class="col-xs-12 test" style="height: 100px"></div>
-            <div class="col-xs-12 test" style="height: 90px"></div>
-            <div class="col-xs-12 test" style="height: 60px"></div>
-            <div class="col-xs-12 test" style="height: 30px"></div>
+        <div class="box introduction-div">
+            <div class="box test" style="height: 120px; width: 100%"></div>
+            <div class="box test" style="height: 100px; width: 100%"></div>
+            <div class="box test" style="height: 90px; width: 100%"></div>
+            <div class="box test" style="height: 60px; width: 100%"></div>
+            <div class="box test" style="height: 30px; width: 100%"></div>
         </div>
     </div>
-    <div class="col-sm-12 try-example" style="min-height: 300px">
-        <div class="col-xs-6" style="min-height: 300px">
-            <div id="editor" class="col-sm-12" style="min-height: 400px">
+    <div class="box try-example" style="width: 100%">
+        <div class="box" style="width: 50%">
+            <div id="editor" class="box" style="height: 400px; width: 100%">
 sisiliano.linearSlider($('#preview'), {
     model: {
         color: "green",
@@ -212,10 +208,11 @@ sisiliano.linearSlider($('#preview'), {
     }
 });
             </div>
-            <div class="btn play-btn glyphicon glyphicon-play">
-            </div>
+            <a class="box btn play-btn glyphicon glyphicon-play">
+                Run
+            </a>
         </div>
-        <div class="col-xs-6 preview" style="min-height: 400px;">
+        <div class="box preview" style="min-height: 400px; width: 50%">
             <div id="preview" style="width: 100%; height: 100px"></div>
         </div>
     </div>
