--- a/test/html/index.html
+++ b/test/html/index.html
@@ -1,21 +1,21 @@
 <html>
 <head>
-    <link rel="stylesheet" href="../../bower_components/qunit/qunit/qunit.css">
+    <link rel="stylesheet" href="./lib/bower_components/qunit/qunit/qunit.css">
     <link rel="stylesheet" href="../../dist/sisiliano.min.css">
 
 
-    <script src="../../bower_components/jquery-simulate-ext/libs/bililiteRange.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/libs/bililiteRange.js"></script>
     <script src="../../lib/infusion/infusion-all.js"></script>
-    <script src="../../bower_components/jquery-simulate-ext/libs/jquery.simulate.js"></script>
-    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.ext.js"></script>
-    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.drag-n-drop.js"></script>
-    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.key-sequence.js"></script>
-    <script src="../../bower_components/jquery-simulate-ext/src/jquery.simulate.key-combo.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/libs/jquery.simulate.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/src/jquery.simulate.ext.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/src/jquery.simulate.drag-n-drop.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/src/jquery.simulate.key-sequence.js"></script>
+    <script src="./lib/bower_components/jquery-simulate-ext/src/jquery.simulate.key-combo.js"></script>
 
 
     <script src="../../lib/handlebars/handlebars-1.0.rc.2.js"></script>
-    <script src="../../bower_components/d3/d3.min.js"></script>
-    <script src="../../bower_components/qunit/qunit/qunit.js"></script>
+    <script src="../../demo/source/bower_components/d3/d3.min.js"></script>
+    <script src="./lib/bower_components/qunit/qunit/qunit.js"></script>
     <script src="../../lib/infusion/jqUnit.js"></script>
 
 
